// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav renders dashboard version 1`] = `
<DocumentFragment>
  <div
    class="sc-lmgQwP efOkME"
  >
    <div
      class="sc-iJCRrE hBGqHH"
    >
      <test-file-stub />
    </div>
    <div
      class="sc-giAqHp hOwdWj"
    >
      <h1>
        Bustling pisces
      </h1>
    </div>
    <div
      class="sc-ezzafa ezUeqV"
    >
      <div>
        <button
          class="sc-jSFjdj fKQAQb sc-pNWdM fCGekV"
          display="inline"
          focusable="false"
          kind="primary"
          type="button"
        >
          <test-file-stub
            aria-hidden="true"
            classname="sc-fnVZcZ dgsepr"
            focusable="false"
          />
        </button>
      </div>
      <div>
        <button
          class="sc-jSFjdj fKQAQb sc-pNWdM fCGekV"
          display="inline"
          focusable="false"
          kind="primary"
          type="button"
        >
          <test-file-stub
            aria-hidden="true"
            classname="sc-dIvrsQ xfuVF"
            focusable="false"
          />
        </button>
        <ul>
          <b>
            File
          </b>
          <li>
            <button>
              New
            </button>
          </li>
          <li>
            <button>
              Save
            </button>
          </li>
          <li>
            <button>
              Examples
            </button>
          </li>
          <b>
            Edit
          </b>
          <li>
            <button>
              Tidy Code
            </button>
          </li>
          <li>
            <button>
              Find
            </button>
          </li>
          <b>
            Sketch
          </b>
          <li>
            <button>
              Add File
            </button>
          </li>
          <li>
            <button>
              Add Folder
            </button>
          </li>
          <b>
            Settings
          </b>
          <li>
            <button>
              Preferences
            </button>
          </li>
          <li>
            <button>
              Language
            </button>
          </li>
          <b>
            Help
          </b>
          <li>
            <button>
              Keyboard Shortcuts
            </button>
          </li>
          <li>
            <button>
              Reference
            </button>
          </li>
          <li>
            <button>
              About
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Nav renders editor version 1`] = `
<DocumentFragment>
  <div
    class="sc-lmgQwP efOkME"
  >
    <div
      class="sc-iJCRrE hBGqHH"
    >
      <test-file-stub />
    </div>
    <div
      class="sc-giAqHp hOwdWj"
    >
      <h1>
        Internal meteor
      </h1>
    </div>
    <div
      class="sc-ezzafa ezUeqV"
    >
      <div>
        <button
          class="sc-jSFjdj fKQAQb sc-pNWdM fCGekV"
          display="inline"
          focusable="false"
          kind="primary"
          type="button"
        >
          <test-file-stub
            aria-hidden="true"
            classname="sc-fnVZcZ dgsepr"
            focusable="false"
          />
        </button>
      </div>
      <div>
        <button
          class="sc-jSFjdj fKQAQb sc-pNWdM fCGekV"
          display="inline"
          focusable="false"
          kind="primary"
          type="button"
        >
          <test-file-stub
            aria-hidden="true"
            classname="sc-dIvrsQ xfuVF"
            focusable="false"
          />
        </button>
        <ul>
          <b>
            File
          </b>
          <li>
            <button>
              New
            </button>
          </li>
          <li>
            <button>
              Save
            </button>
          </li>
          <li>
            <button>
              Examples
            </button>
          </li>
          <b>
            Edit
          </b>
          <li>
            <button>
              Tidy Code
            </button>
          </li>
          <li>
            <button>
              Find
            </button>
          </li>
          <b>
            Sketch
          </b>
          <li>
            <button>
              Add File
            </button>
          </li>
          <li>
            <button>
              Add Folder
            </button>
          </li>
          <b>
            Settings
          </b>
          <li>
            <button>
              Preferences
            </button>
          </li>
          <li>
            <button>
              Language
            </button>
          </li>
          <b>
            Help
          </b>
          <li>
            <button>
              Keyboard Shortcuts
            </button>
          </li>
          <li>
            <button>
              Reference
            </button>
          </li>
          <li>
            <button>
              About
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
